доработать архитектуру программы, разделить согласно логике, уменьшить количество запросов к БД